fix search for website overview page

--- a/src/app/website/website-overview.component.html
+++ b/src/app/website/website-overview.component.html
@@ -3,7 +3,7 @@
 <div class="website search">
     <div class="search--title">
         <label>Search</label>
-        <input (keyup)="search($event)" placeholder="search"/>
+        <input (keyup)="Search($event)" placeholder="search"/>
     </div>
 </div>
 
