implement event handeling for search.component

--- a/src/app/environment/environments-overview.component.html
+++ b/src/app/environment/environments-overview.component.html
@@ -1,3 +1,6 @@
+
+<search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+
 <div class="environment" BackgroundHighlight="lightblue"
      (click)="gotoEnvironment(item)"
      *ngFor="let item of ViewCollection">
