--- a/src/app/mapping/mapping-overview.component.html
+++ b/src/app/mapping/mapping-overview.component.html
@@ -1,11 +1,7 @@
 <h1>{{title}}</h1>
 
-<div class="webapplication search">
-    <div class="search--title">
-        <label>Search</label>
-        <input (keyup)="Search($event)" placeholder="search"/>
-    </div>
-</div>
+<search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+
 <div *ngFor="let item of ViewCollection">
    <mapping-promobox [Model]="item"></mapping-promobox>
 </div>
