--- a/src/app/environment/environments-overview.component.html
+++ b/src/app/environment/environments-overview.component.html
@@ -2,11 +2,12 @@
 <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
 
 <div class="environment" BackgroundHighlight="lightblue"
-     (click)="gotoEnvironment(item)"
      *ngFor="let item of ViewCollection">
     <div><label>Id: </label> {{item.Id}} </div>
     <div><label>Purpose: </label> {{item.EnvironmentPurpose}} </div>
     <div><label>DiscoveryUrl: </label> {{item.DiscoveryEndpointUrl}} </div>
     <div><label>IsOffline: </label> {{item.IsOffline}} </div>
     <div><label>ClientId: </label> {{item.Credentials.ClientId}} </div>
+
+    <action-buttons [Model]="item"></action-buttons>
 </div>
