--- a/src/app/website/website-overview.component.html
+++ b/src/app/website/website-overview.component.html
@@ -3,5 +3,5 @@
 <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
 
 <div *ngFor="let item of ViewCollection">
-   <website-promobox [website]="item"></website-promobox>
+   <website-promobox [Model]="item"></website-promobox>
 </div>
