--- a/src/app/shared/action-buttons/action-buttons.component.html
+++ b/src/app/shared/action-buttons/action-buttons.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" (click)="ZoomIn()">Zoom in</button>
+<button type="button" class="btn btn-primary" [GoTo]="model" Path="{{path}}">Zoom in</button>
 <button type="button" class="btn btn-warning">Delete</button>
 <button type="button" class="btn btn-success"(click)="lgModal.show()">Edit</button>
 
@@ -10,7 +10,7 @@
         <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title">Large modal</h4>
+        <h4 class="modal-title">Edit {{model.Id}}</h4>
       </div>
       <div class="modal-body">
         ...
