--- a/src/app/website/website-promobox.component.html
+++ b/src/app/website/website-promobox.component.html
@@ -1,8 +1,10 @@
-<div *ngIf="website" class="website" BackgroundHighlight="lightblue">
-    <div><label>Id: </label> {{website.Id}} </div>
-    <div><label>CdEnvironmentId: </label> {{website.CdEnvironmentId}} </div>
-    <div><label>EnvironmentPurpose: </label> {{website.EnvironmentPurpose}} </div>
-    <div *ngFor="let baseUrl of website.BaseUrls">
+<div *ngIf="model" class="model" BackgroundHighlight="lightblue">
+    <div><label>Id: </label> {{model.Id}} </div>
+    <div><label>CdEnvironmentId: </label> {{model.CdEnvironmentId}} </div>
+    <div><label>EnvironmentPurpose: </label> {{model.EnvironmentPurpose}} </div>
+    <div *ngFor="let baseUrl of model.BaseUrls">
         <label>BaseUrl: </label> {{baseUrl}}
     </div>
+
+    <action-buttons [Model]="model" Path="{{detailsPath}}"></action-buttons>
 </div>
