create env promobox

--- a/src/app/environment/environment.component.html
+++ b/src/app/environment/environment.component.html
@@ -1,30 +1,9 @@
 <div *ngIf="model">
-    <button type="button" class="btn btn-success"(click)="lgModal.show()">Edit</button>
-    <div><label>Id:</label> {{model.Id}}</div>
-    <div><label>Purpose:</label> {{model.EnvironmentPurpose}}</div>
-    <div><label>IsOffline:</label> {{model.IsOffline}}</div>
-
-
-    <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">Edit {{model.Id}}</h4>
-                </div>
-                <div class="modal-body">
-                    <div><label>EnvironmentPurpose</label> <input [(ngModel)]="model.EnvironmentPurpose" placeholder="Purpose" /></div>
-                    <div><label>DiscoveryEndpointUrl</label> <input [(ngModel)]="model.DiscoveryEndpointUrl" placeholder="DiscoveryEndpointUrl" /></div>
-                    <div><label>IsOffline</label> <input  type="checkbox" [(ngModel)]="model.IsOffline" placeholder="IsOffline" /></div>
-
-                    <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
-                    <button type="button" (click)="Save()" aria-label="Save">Save</button>
-                </div>
-            </div>
-        </div>
+    <button type="button" class="btn btn-success"(click)="ShowEditWindow()">Edit</button>
+    <div class="environment">
+        <environment-promobox [Model]="model"></environment-promobox>
     </div>
+    <env-edit [Model]="model"></env-edit>
 </div>
 
 <!--
