--- a/src/app/environment/environment-edit.component.html
+++ b/src/app/environment/environment-edit.component.html
@@ -1,19 +1,35 @@
  <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title">Edit {{model.Id}}</h4>
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" (click)="lgModal.hide()" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">{{tabHeader}}</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>EnvironmentPurpose</label>
+                    <input [(ngModel)]="model.EnvironmentPurpose" placeholder="Purpose" required />
                 </div>
-                <div class="modal-body">
-                    <div><label>EnvironmentPurpose</label> <input [(ngModel)]="model.EnvironmentPurpose" placeholder="Purpose" /></div>
-                    <div><label>DiscoveryEndpointUrl</label> <input [(ngModel)]="model.DiscoveryEndpointUrl" placeholder="DiscoveryEndpointUrl" /></div>
-                    <div><label>IsOffline</label> <input  type="checkbox" [(ngModel)]="model.IsOffline" placeholder="IsOffline" /></div>
+                <div class="form-group">
+                    <label>DiscoveryEndpointUrl</label>
+                    <input [(ngModel)]="model.DiscoveryEndpointUrl" placeholder="DiscoveryEndpointUrl" required />
+                </div>
+                <div class="form-group">
+                    <label>IsOffline</label>
+                    <input  type="checkbox" [(ngModel)]="model.IsOffline" placeholder="IsOffline" required  />
+                </div>
+                <div class="form-group">
+                    <label>AuthenticationType</label>
+                    <select class="form-control" id="authenticationtypes"
+                            [(ngModel)]="model.Credentials.AuthenticationType" required >
+                        <option *ngFor="let type of authenticationTypes" [value]="type">{{type}}</option>
+                    </select>
+                </div>
 
-                    <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
-                    <button type="button" (click)="Save()" aria-label="Save">Save</button>
-                </div>
+                <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
+                <button type="button" (click)="Save()" aria-label="Save">Save</button>
             </div>
         </div>
+    </div>
