--- a/src/app/environment/environment-edit.component.html
+++ b/src/app/environment/environment-edit.component.html
@@ -10,7 +10,8 @@
             <div class="modal-body">
                 <div class="form-group" *ngIf="showIdField">
                     <label>Id</label>
-                    <input type="text" [(ngModel)]="model.Id" placeholder="Id" required />
+                    <input type="text" [(ngModel)]="model.Id" placeholder="Id" required [disabled]="autoGenerateId"/>
+                    <input type="checkbox" [checked]="autoGenerateId" (click)="autoGenerateId = !autoGenerateId" />
                 </div>
                 <div class="form-group">
                     <label>EnvironmentPurpose</label>
