--- a/src/app/environment/environment-promobox.component.html
+++ b/src/app/environment/environment-promobox.component.html
@@ -7,4 +7,24 @@
     <div><label>Authentication Type: </label> {{model.Credentials.AuthenticationType}} </div>
 
     <button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>
+    <button type="button" class="btn btn-warning" (click)="smModal.show()">Delete</button>
+
+    <div bsModal #smModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Delete CdEnvironment {{model.Id}}??</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="smModal.hide()">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <button type="button" class="btn btn-warning" aria-label="Close" (click)="smModal.hide()">Cancel</button>
+                <button type="button" class="btn btn-warning" (click)="Delete()">Delete</button>
+            </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
