--- a/src/app/environment/environments-overview.component.html
+++ b/src/app/environment/environments-overview.component.html
@@ -1,10 +1,13 @@
 
+<div *ngFor="let alert of alerts">
+  <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout">{{ alert.msg }}</alert>
+</div>
 <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
 
 <div>
     <button type="button" class="btn btn-success"(click)="ShowEditWindow()">Add</button>
 </div>
-<env-edit></env-edit>
+<env-edit (ModelUpdate)="UpdateModel($event)"></env-edit>
 <div class="environment" BackgroundHighlight="lightblue"
      *ngFor="let item of ViewCollection">
     <environment-promobox [Model]="item"></environment-promobox>
