implement update with PATCH verb

--- a/src/app/environment/environment-edit.component.html
+++ b/src/app/environment/environment-edit.component.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
-                <button type="button" (click)="Save()" aria-label="Save">Save</button>
+                <button type="button" (click)="SaveOrUpdate()" aria-label="Save">Save</button>
             </div>
         </div>
     </div>
