--- a/src/app/environment/environment-promobox.component.html
+++ b/src/app/environment/environment-promobox.component.html
@@ -5,9 +5,10 @@
     <div><label>IsOffline: </label> {{model.IsOffline}} </div>
     <div><label>ClientId: </label> {{model.Credentials.ClientId}} </div>
     <div><label>Authentication Type: </label> {{model.Credentials.AuthenticationType}} </div>
-
-    <button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>
-    <button type="button" class="btn btn-warning" (click)="smModal.show()">Delete</button>
+    <div *ngIf="showActionButtons">
+        <button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>
+        <button type="button" class="btn btn-warning" (click)="smModal.show()">Delete</button>
+    </div>
     <div bsModal #smModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
