--- a/src/app/website/website-overview.component.html
+++ b/src/app/website/website-overview.component.html
@@ -4,6 +4,7 @@
 <div>
     <button type="button" class="btn btn-success"(click)="ShowEditWindow()">Add</button>
 </div>
+<website-edit> </website-edit>
 <div *ngFor="let item of ViewCollection">
    <website-promobox [Model]="item"></website-promobox>
 </div>
