fix messeaging on website

--- a/src/app/website/website-edit.component.html
+++ b/src/app/website/website-edit.component.html
@@ -16,7 +16,7 @@
                 <div class="form-group">
                     <label>CdEnvironment</label>
                      <select class="form-control" id="CdEnvironmentId"
-                            [(ngModel)]="model.EnvironmentPurpose" required >
+                            [(ngModel)]="model.CdEnvironmentId" required >
                         <option *ngFor="let c of availableEnvironments" [value]="c[0]">{{c[0]}} | ({{c[1]}})</option>
                     </select>
                 </div>
