--- a/src/app/shared/popup/delete-window.component.html
+++ b/src/app/shared/popup/delete-window.component.html
@@ -1,5 +1,4 @@
-
-<!--<div bsModal #smModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+<div bsModal #smModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
         <div class="modal-header">
@@ -10,10 +9,8 @@
         </div>
         <div class="modal-body">
             <button type="button" class="btn btn-warning" aria-label="Close" (click)="smModal.hide()">Cancel</button>
-            <button type="button" class="btn btn-warning" (click)="Delete($event)">Delete</button>
+            <button type="button" class="btn btn-warning" (click)="delete($event)">Delete</button>
         </div>
         </div>
     </div>
-</div>-->
-
-asdf
+</div>
