--- a/src/app/webapplication/webapplication-promobox.component.html
+++ b/src/app/webapplication/webapplication-promobox.component.html
@@ -2,5 +2,30 @@
     <div><label>Id: </label> {{model.Id}} </div>
     <div><label>WebsiteId: </label> {{model.WebsiteId}} </div>
     <div><label>EnvironmentPurpose: </label> {{model.EnvironmentPurpose}} </div>
-    <div><label>ContextUrl: </label> {{model.Url}} </div>
+    <div><label>ContextUrl: </label> {{model.ContextUrl}} </div>
+
+    <webapplication-edit #webappedit [Model]="model"></webapplication-edit>
+
+      <div *ngIf="showActionButtons">
+        <!--<button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>-->
+        <button type="button" class="btn btn-primary" (click)="webappedit.Show()">Edit</button>
+        <!--<button type="button" class="btn btn-warning" (click)="smModal.show()">Delete</button>-->
+     </div>
+
+    <div bsModal #smModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Delete Website {{model.Id}}??</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="smModal.hide()">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <button type="button" class="btn btn-warning" aria-label="Close" (click)="smModal.hide()">Cancel</button>
+                <button type="button" class="btn btn-warning" (click)="Delete()">Delete</button>
+            </div>
+            </div>
+        </div>
+    </div>
 </div>
