--- a/src/app/website/website.component.html
+++ b/src/app/website/website.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="model">
-    <button type="button" class="btn btn-success"(click)="ShowEditWindow()">Edit</button>
+    <button type="button" class="btn btn-success"(click)="websiteEdit.show()">Edit</button>
     <website-promobox [ShowActionButtons]="false" [Model]="model"></website-promobox>
-    <website-edit [Model]="model"></website-edit>
+    <website-edit #websiteEdit [Model]="model"></website-edit>
 </div>
