--- a/src/app/topologytype/topologytype-edit.component.html
+++ b/src/app/topologytype/topologytype-edit.component.html
@@ -30,7 +30,7 @@
                 </ul>
 
                 <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
-                <button type="button" (click)="SaveOrUpdate()" aria-label="Save">Save</button>
+                <button type="button" (click)="saveOrUpdate()" aria-label="Save">Save</button>
             </div>
         </div>
     </div>
