--- a/src/app/webapplication/webapplication-edit.component.html
+++ b/src/app/webapplication/webapplication-edit.component.html
@@ -13,7 +13,7 @@
                     <input type="text" [(ngModel)]="model.ContextUrl" placeholder="ContextUrl"/>
                 </div>
                 <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
-                <button type="button" (click)="SaveOrUpdate()" aria-label="Save">Save</button>
+                <button type="button" (click)="saveOrUpdate()" aria-label="Save">Save</button>
             </div>
         </div>
     </div>
