--- a/src/app/shared/popup/delete-window.component.html
+++ b/src/app/shared/popup/delete-window.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="modal-body">
             <button type="button" class="btn btn-warning" aria-label="Close" (click)="smModal.hide()">Cancel</button>
-            <button type="button" class="btn btn-warning" (click)="delete($event)">Delete</button>
+            <button type="button" class="btn btn-success" (click)="delete($event)">Delete</button>
         </div>
         </div>
     </div>
