--- a/src/app/mapping/mapping-promobox.component.html
+++ b/src/app/mapping/mapping-promobox.component.html
@@ -1,4 +1,57 @@
-<div *ngIf="model" class="mapping" BackgroundHighlight="lightblue">
+     <div *ngIf="model" class="panel panel-success">
+            <div class="panel-heading">
+                <strong>Mapping ({{model.Id}})</strong>
+                <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="mappingEdit.show()">Edit</button>
+                <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>
+            </div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <label>CmEnvironmentId:</label>
+                        <span> {{model.CmEnvironmentId}}</span>
+                    </li>
+                    <li class="list-group-item">
+                        <label>PublicationId:</label>
+                        <span> {{model.PublicationId}}</span>
+                    </li>
+                    <li class="list-group-item">
+                        <label>EnvironmentPurpose:</label>
+                        <span> {{model.EnvironmentPurpose}}</span>
+                    </li>
+                    <li class="list-group-item">
+                        <label>WebApplicationId:</label>
+                        <span> {{model.WebApplicationId}}</span>
+                    </li>
+                    <li class="list-group-item">
+                        <label>RelativeUrl:</label>
+                        <span> {{model.RelativeUrl}}</span>
+                    </li>
+                    <li class="list-group-item">
+                        <label>PrimaryMappedUrl:</label>
+                        <span> {{model.PrimaryMappedUrl}}</span>
+                    </li>
+                    <li class="list-group-item">
+                        <label>IsOffline:</label>
+                        <span> {{model.IsOffline}}</span>
+                    </li>
+                </ul>
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        ExtensionProperties
+                    </div>
+                    <ul class="list-group">
+                        <li *ngFor="let c of model.ExtensionProperties" class="list-group-item">
+                            <label>{{c.Name}}</label>
+                            <span>{{c.Value}}</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <mapping-edit #mappingEdit [Model]="model"></mapping-edit>
+            <delete-item #deleteItem [Model]="model" (onDelete)="delete($event)"></delete-item>
+        </div>
+
+<!--<div *ngIf="model" class="mapping" BackgroundHighlight="lightblue">
     <div><label>Id: </label> {{model.Id}} </div>
     <div><label>CmEnvironmentId: </label> {{model.CmEnvironmentId}} </div>
     <div><label>PublicationId: </label> {{model.PublicationId}} </div>
@@ -7,13 +60,17 @@
     <div><label>RelativeUrl: </label> {{model.RelativeUrl}} </div>
     <div><label>PrimaryMappedUrl: </label> {{model.PrimaryMappedUrl}} </div>
     <div><label>IsOffline: </label> {{model.IsOffline}} </div>
-
+      <ul class="list-group">
+        <li *ngFor="let c of model.ExtensionProperties" class="list-group-item">
+            <label>{{c.Name}}</label>
+            <span>{{c.Value}}</span>
+        </li>
+    </ul>
     <div *ngIf="showActionButtons">
-        <button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>
+
         <button type="button" class="btn btn-primary" (click)="mappingEdit.show()">Edit</button>
         <button type="button" class="btn btn-warning" (click)="deleteItem.show()">Delete</button>
      </div>
     <mapping-edit #mappingEdit [Model]="model"></mapping-edit>
     <delete-item #deleteItem [Model]="model" (onDelete)="delete($event)"></delete-item>
-
-</div>
+</div>-->
